src/test/deca/context/valid/init_opcmp.deca
{
boolean x = 3 > 4;
}
