src/test/deca/context/invalid/nonprovided/init_oparith_assign_type.deca
{
String x = 3 + 4;
}
